# Multimodal-RAG

./: pyproject.toml
scripts/: ingest_pdf.py
src/: config.py
src/generator/: vlm_client.py
src/ingest/: cpu_worker.py  gpu_worker.py  master.py
src/pipelines/: query_agent.py
src/retriever/: retriever.py
